Bug 301969 - layout generator auto detection
Summary: layout generator auto detection
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-15 14:37 UTC by Ralf Habacker
Modified: 2013-11-06 17:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-06-15 14:37:44 UTC
The auto layout feature searches in the system path for graphviz layout generators. 
On windows graphviz is a separate package which need to be installed independently.
To let umbrello  to find those generators an automatic search should be implemented.
In cases where the automatic detection will not fit, a way to enter generator pathes should be there.






Reproducible: Always
Comment 1 Ralf Habacker 2012-06-15 20:23:21 UTC
SVN commit 1300948 by habacker:

Added layout generator auto detection and auto layout setting page.


 M  +2 -0      CMakeLists.txt  
 A             dialogs/autolayoutoptionpage.cpp   [License: GPL (v2+)]
 A             dialogs/autolayoutoptionpage.h   [License: GPL (v2+)]
 A             dialogs/autolayoutoptionpage.ui  
 M  +23 -0     dialogs/settingsdlg.cpp  
 M  +4 -1      dialogs/settingsdlg.h  
 M  +3 -3      dotgenerator.cpp  
 M  +0 -1      dotgenerator.h  
 M  +40 -11    layoutgenerator.h  
 M  +6 -0      optionstate.h  
 M  +10 -0     umbrello.kcfg  
 M  +4 -0      uml.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1300948
Comment 2 Ralf Habacker 2012-06-18 08:42:50 UTC
Just a note: Without this patch the auto layout feature listed in 4.9 feature list will not be usable for end users on windows.
Comment 3 Ralf Habacker 2013-11-06 17:19:32 UTC
apply fixed bug from 4.9.0 changelog