Added layout generator auto detection and auto layout setting page.

BUG:301969

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1300948