umbrello/optionstate.h
@@ -131,6 +131,11 @@ struct CodeImportState {
     bool createArtifacts;
 };
 
+struct AutoLayoutState {
+    bool autoDotPath;  ///< determine path to dot executable automatically
+    QString dotPath;  ///< path to dot executable
+};
+
 struct OptionState {
     GeneralState        generalState;
     UIState             uiState;
@@ -138,6 +143,7 @@ struct OptionState {
     CodeViewerState     codeViewerState;
     CodeGenerationState codeGenerationState;
     CodeImportState     codeImportState;
+    AutoLayoutState     autoLayoutState;
 };
 
 OptionState& optionState();
